--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 	<table id="board">
 		<tr>
-			<td class="cell board-corner" id="cell20">
+			<td class="cell board-corner the-top1" id="cell20">
 				<img class="corner-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-21-Park.svg" />
 			</td>
 			<td class="cell board-top" id="cell21">
@@ -141,7 +141,7 @@
 			<td class="cell board-top" id="cell29">
 				<img class="top-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-29-Gluttony Gardens.svg" />
 			</td>
-			<td class="cell board-corner" id="cell30">
+			<td class="cell board-corner the-top2" id="cell30">
 				<img class="corner-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-32-Jail.svg" />
 			</td>
 		</tr>
@@ -236,7 +236,7 @@
 		</tr>
 		<tr>
 			<td class="cell board-corner" id="cell10">
-				<img class="corner-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-10-Jail.svg" />
+				<img class="corner-card the-bottom" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-10-Jail.svg" />
 			</td>
 			<td class="cell board-bottom" id="cell9">
 				<img class="bottom-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-09-Dread Drive.svg" />
