--- a/index.html
+++ b/index.html
@@ -115,31 +115,38 @@
 				<img class="corner-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-21-Park.svg" />
 			</td>
 			<td class="cell board-top" id="cell21">
-				<img class="top-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-21-Torture Terrace.svg" />
+				<img class="top-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-21-Torture Terrace.svg" />
 			</td>
 			<td class="cell board-top" id="cell22">
 				<img class="top-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-22-Chance.svg" />
 			</td>
 			<td class="cell board-top" id="cell23">
-				<img class="top-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-23-Evil Avenue.svg" />
+				<img class="top-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-23-Evil Avenue.svg" />
 			</td>
 			<td class="cell board-top" id="cell24">
-				<img class="top-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-24-Sinister Street.svg" />
+				<img class="top-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-24-Sinister Street.svg" />
 			</td>
 			<td class="cell board-top" id="cell25">
-				<img class="top-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-25-BrimstoneRR.svg" />
+				<img class="top-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-25-BrimstoneRR.svg" />
 			</td>
 			<td class="cell board-top" id="cell26">
-				<img class="top-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-26-Anger Avenue.svg" />
+				<img class="top-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-26-Anger Avenue.svg" />
 			</td>
 			<td class="cell board-top" id="cell27">
-				<img class="top-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-27-Envy Avenue.svg" />
+				<img class="top-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-27-Envy Avenue.svg" />
 			</td>
 			<td class="cell board-top" id="cell28">
 				<img class="top-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-28-BloodW.svg" />
 			</td>
 			<td class="cell board-top" id="cell29">
-				<img class="top-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-29-Gluttony Gardens.svg" />
+				<img class="top-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-29-Gluttony Gardens.svg" />
 			</td>
 			<td class="cell board-corner the-top2" id="cell30">
 				<img class="corner-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-32-Jail.svg" />
@@ -147,56 +154,68 @@
 		</tr>
 		<tr>
 			<td class="cell board-left" id="cell19">
-				<img class="left-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-19-Suffer Street.svg" />
+				<img class="left-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-19-Suffer Street.svg" />
 			</td>
 			<td colspan="9" class="board-center"></td>
 			<td class="cell board-right" id="cell31">
-				<img class="right-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-31-Sloth Street.svg" />
+				<img class="right-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-31-Sloth Street.svg" />
 			</td>
 		</tr>
 		<tr>
 			<td class="cell board-left" id="cell18">
-				<img class="left-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-18-Apathetic Park.svg" />
+				<img class="left-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-18-Apathetic Park.svg" />
 			</td>
 			<td colspan="9" class="board-center"></td>
 			<td class="cell board-right" id="cell32">
-				<img class="right-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-32-Lust Lane.svg" />
+				<img class="right-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-32-Lust Lane.svg" />
 			</td>
 		</tr>
 		<tr>
 			<td class="cell board-left" id="cell17">
-				<img class="left-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-17-Death Chest.svg" />
+				<img class="left-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-17-Death Chest.svg" />
 			</td>
 			<td colspan="9" class="board-center">
 				<div id="center-image">
-					<img class="center-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-40-MIDDLE.svg" />
+					<img class="center-card"
+						src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-40-MIDDLE.svg" />
 				</div>
 			</td>
 			<td class="cell board-right" id="cell33">
-				<img class="right-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-33-Death Chest.svg" />
+				<img class="right-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-33-Death Chest.svg" />
 			</td>
 		</tr>
 		<tr>
 			<td class="cell board-left" id="cell16">
-				<img class="left-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-16-Punishment Place.svg" />
+				<img class="left-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-16-Punishment Place.svg" />
 			</td>
 			<td colspan="9" class="board-center"></td>
 			<td class="cell board-right" id="cell34">
-				<img class="right-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-34-Greed Street.svg" />
+				<img class="right-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-34-Greed Street.svg" />
 			</td>
 		</tr>
 		<tr>
 			<td class="cell board-left" id="cell15">
-				<img class="left-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-15-PerditionRR.svg" />
+				<img class="left-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-15-PerditionRR.svg" />
 			</td>
 			<td colspan="9" class="board-center"></td>
 			<td class="cell board-right" id="cell35">
-				<img class="right-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-35-InfernoRR.svg" />
+				<img class="right-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-35-InfernoRR.svg" />
 			</td>
 		</tr>
 		<tr>
 			<td class="cell board-left" id="cell14">
-				<img class="left-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-14-Bleak Street.svg" />
+				<img class="left-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-14-Bleak Street.svg" />
 
 			</td>
 			<td colspan="9" class="board-center"></td>
@@ -206,12 +225,14 @@
 		</tr>
 		<tr>
 			<td class="cell board-left" id="cell13">
-				<img class="left-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-13-Abyss Avenue.svg" />
+				<img class="left-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-13-Abyss Avenue.svg" />
 
 			</td>
 			<td colspan="9" class="board-center"></td>
 			<td class="cell board-right" id="cell37">
-				<img class="right-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-37-Pride Place.svg" />
+				<img class="right-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-37-Pride Place.svg" />
 			</td>
 		</tr>
 		<tr>
@@ -225,55 +246,67 @@
 		</tr>
 		<tr>
 			<td class="cell board-left" id="cell11">
-				<img class="left-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-11-Grave Place.svg" />
+				<img class="left-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-11-Grave Place.svg" />
 			</td>
 			<td colspan="9" class="board-center">
 				<div id="jail"></div>
 			</td>
 			<td class="cell board-right" id="cell39">
-				<img class="right-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-39-Damnation.svg" />
+				<img class="right-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-39-Damnation.svg" />
 			</td>
 		</tr>
 		<tr>
 			<td class="cell board-corner" id="cell10">
-				<img class="corner-card the-bottom" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-10-Jail.svg" />
+				<img class="corner-card the-bottom"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-10-Jail.svg" />
 			</td>
 			<td class="cell board-bottom" id="cell9">
-				<img class="bottom-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-09-Dread Drive.svg" />
+				<img class="bottom-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-09-Dread Drive.svg" />
 			</td>
 			<td class="cell board-bottom" id="cell8">
-				<img class="bottom-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-08-Agony Avenue.svg" />
+				<img class="bottom-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-08-Agony Avenue.svg" />
 			</td>
 			<td class="cell board-bottom" id="cell7">
 				<img class="bottom-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-07-Chance.svg" />
 			</td>
 			<td class="cell board-bottom" id="cell6">
-				<img class="bottom-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-06-Turmoil Terrace.svg" />
+				<img class="bottom-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-06-Turmoil Terrace.svg" />
 			</td>
 			<td class="cell board-bottom" id="cell5">
-				<img class="bottom-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-05-RuinationRR.svg" />
+				<img class="bottom-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-05-RuinationRR.svg" />
 			</td>
 			<td class="cell board-bottom" id="cell4">
-				<img class="bottom-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-04-Church Tax.svg" />
+				<img class="bottom-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-04-Church Tax.svg" />
 			</td>
 			<td class="cell board-bottom" id="cell3">
-				<img class="bottom-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-03-Bane Avenue.svg" />
+				<img class="bottom-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-03-Bane Avenue.svg" />
 			</td>
 			<td class="cell board-bottom" id="cell2">
-				<img class="bottom-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-02-Death Chest.svg" />
+				<img class="bottom-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-02-Death Chest.svg" />
 			</td>
 			<td class="cell board-bottom" id="cell1">
-				<img class="bottom-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-01-Misery Avenue.svg" />
+				<img class="bottom-card"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-01-Misery Avenue.svg" />
 			</td>
 			<td class="cell board-corner" id="cell0">
-				<img class="corner-card" src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-00-Go.svg" />
+				<img class="corner-card" id="suree"
+					src="./Final svgs (1)/Final svgs/small/Reaperopoly-Boardspace-00-Go.svg" />
 			</td>
 		</tr>
 	</table>
 
 	<div id="moneybarwrap">
 		<div id="moneybar">
-			<table>
+			<table id="yeahhh">
 				<tr id="moneybarrow1" class="money-bar-row">
 					<td class="moneybararrowcell"><img src="images/arrow.png" id="p1arrow" class="money-bar-arrow"
 							alt=">" /></td>
@@ -350,7 +383,7 @@
 	</div>
 
 	<div id="setup">
-		<img src="./images/Reaperopoly-Title.svg" style='height: 170px;'/>
+		<img src="./images/Reaperopoly-Title.svg" style='height: 170px;' />
 		<div style="margin-bottom: 20px;">
 			Select number of players.
 			<select id="playernumber" title="Select the number of players for the game.">
@@ -692,7 +725,49 @@
 			</tr>
 		</table>
 	</div>
+	<script>
+		// The current position of mouse
+		let x = 0;
+		let y = 0;
 
+		// Query the element
+		const ele = document.getElementById('control');
+
+		// Handle the mousedown event
+		// that's triggered when user drags the element
+		const mouseDownHandler = function (e) {
+			// Get the current mouse position
+			x = e.clientX;
+			y = e.clientY;
+
+			// Attach the listeners to `document`
+			document.addEventListener('mousemove', mouseMoveHandler);
+			document.addEventListener('mouseup', mouseUpHandler);
+		};
+
+		const mouseMoveHandler = function (e) {
+			// How far the mouse has been moved
+			const dx = e.clientX - x;
+			const dy = e.clientY - y;
+
+			// Set the position of element
+			ele.style.top = `${ele.offsetTop + dy}px`;
+			ele.style.left = `${ele.offsetLeft + dx}px`;
+
+			// Reassign the position of mouse
+			x = e.clientX;
+			y = e.clientY;
+		};
+
+		const mouseUpHandler = function () {
+			// Remove the handlers of `mousemove` and `mouseup`
+			document.removeEventListener('mousemove', mouseMoveHandler);
+			document.removeEventListener('mouseup', mouseUpHandler);
+		};
+
+		ele.addEventListener('mousedown', mouseDownHandler);
+
+	</script>
 </body>
 
 </html>
